categories, posts and users

--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
                 <h4>Latest Posts</h4>
               </div>
               <table class="table table-striped">
-                <thead class="thead-inverse">
+                <thead class="thead-dark">
                   <tr>
                     <th>#</th>
                     <th>Title</th>
