posts, settings, users and details commit

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
                   ><i class="fa fa-user-circle"> Profile</i></a
                 >
                 <a href="settings.html" class="dropdown-item"
-                  ><i class="fa fa-user-circle"> Settings</i></a
+                  ><i class="fa fa-gear"> Settings</i></a
                 >
               </div>
             </li>
@@ -133,7 +133,7 @@
                     <td>Web Development</td>
                     <td>July 12, 2017</td>
                     <td>
-                      <a href="details.hrml" class="btn btn-secondary">
+                      <a href="details.html" class="btn btn-secondary">
                         <i class="fa fa-angle-double-right"> Details</i>
                       </a>
                     </td>
@@ -144,7 +144,7 @@
                     <td>Tech Gadgets</td>
                     <td>July 13, 2017</td>
                     <td>
-                      <a href="details.hrml" class="btn btn-secondary">
+                      <a href="details.html" class="btn btn-secondary">
                         <i class="fa fa-angle-double-right"> Details</i>
                       </a>
                     </td>
@@ -155,7 +155,7 @@
                     <td>Web Development</td>
                     <td>July 14, 2017</td>
                     <td>
-                      <a href="details.hrml" class="btn btn-secondary">
+                      <a href="details.html" class="btn btn-secondary">
                         <i class="fa fa-angle-double-right"> Details</i>
                       </a>
                     </td>
@@ -166,7 +166,7 @@
                     <td>Business</td>
                     <td>July 15, 2017</td>
                     <td>
-                      <a href="details.hrml" class="btn btn-secondary">
+                      <a href="details.html" class="btn btn-secondary">
                         <i class="fa fa-angle-double-right"> Details</i>
                       </a>
                     </td>
@@ -177,7 +177,7 @@
                     <td>Web Development</td>
                     <td>July 16, 2017</td>
                     <td>
-                      <a href="details.hrml" class="btn btn-secondary">
+                      <a href="details.html" class="btn btn-secondary">
                         <i class="fa fa-angle-double-right"> Details</i>
                       </a>
                     </td>
@@ -188,7 +188,7 @@
                     <td>Health & Wellness</td>
                     <td>July 17, 2017</td>
                     <td>
-                      <a href="details.hrml" class="btn btn-secondary">
+                      <a href="details.html" class="btn btn-secondary">
                         <i class="fa fa-angle-double-right"> Details</i>
                       </a>
                     </td>
