--- a/src/posts.html
+++ b/src/posts.html
@@ -47,7 +47,7 @@
                   ><i class="fa fa-user-circle"> Profile</i></a
                 >
                 <a href="settings.html" class="dropdown-item"
-                  ><i class="fa fa-user-circle"> Settings</i></a
+                  ><i class="fa fa-gear"> Settings</i></a
                 >
               </div>
             </li>
