--- a/src/details.html
+++ b/src/details.html
@@ -30,7 +30,7 @@
               <a href="categories.html" class="nav-link">Categories</a>
             </li>
             <li class="nav-item px-2">
-              <a href="users.html" class="nav-link active">Users</a>
+              <a href="users.html" class="nav-link">Users</a>
             </li>
           </ul>
 
@@ -61,11 +61,11 @@
       </div>
     </nav>
 
-    <header id="main-header" class="py-2 bg-warning text-white">
+    <header id="main-header" class="py-2 bg-primary text-white">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h1><i class="fa fa-users"></i> Users</h1>
+            <h1>Post One</h1>
           </div>
         </div>
       </div>
@@ -74,13 +74,20 @@
     <section id="action" class="py-4 mb-4 bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 ml-auto">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="search" />
-              <span class="input-group-btn">
-                <button class="btn btn-warning">Search</button>
-              </span>
-            </div>
+          <div class="col-md-3 mr-auto">
+            <a href="index.html" class="btn btn-light btn-block">
+              <i class="fa fa-arrow-left"></i> Back To Dashboard
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#" class="btn btn-success btn-block">
+              <i class="fa fa-check"></i> Save Changes
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#" class="btn btn-danger btn-block">
+              <i class="fa fa-remove"></i> Delete Post
+            </a>
           </div>
         </div>
       </div>
@@ -92,47 +99,40 @@
           <div class="col">
             <div class="card">
               <div class="card-header">
-                <h4>Latest Users</h4>
+                <h4>Edit Post</h4>
               </div>
-              <table class="table table-striped">
-                <thead class="thead-dark">
-                  <tr>
-                    <th>#</th>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td scope="row">1</td>
-                    <td>John Doe</td>
-                    <td>jdoe@gmail.com</td>
-                  </tr>
-                  <tr>
-                    <td scope="row">2</td>
-                    <td>Brad Traversy</td>
-                    <td>bradt@gmail.com</td>
-                  </tr>
-                </tbody>
-              </table>
-              <nav class="ml-4">
-                <ul class="pagination">
-                  <li class="page-item">
-                    <a href="#" class="page-link disabled">Previous</a>
-                  </li>
-                  <li class="page-item active">
-                    <a href="#" class="page-link">1</a>
-                  </li>
-                  <li class="page-item">
-                    <a href="#" class="page-link">2</a>
-                  </li>
-                  <li class="page-item"><a href="#" class="page-link">3</a></li>
-                  <li class="page-item">
-                    <a href="#" class="page-link">Next</a>
-                  </li>
-                </ul>
-              </nav>
+              <div class="card-body">
+                <form>
+                  <div class="form-group">
+                    <label for="title">Title</label>
+                    <input type="text" class="form-control" value="Post One" />
+                  </div>
+                  <div class="form-group">
+                    <label for="">Category</label>
+                    <select class="form-control">
+                      <option value="">Web Development</option>
+                      <option value="">Tech Gadgets</option>
+                      <option value="">Business</option>
+                      <option value="">Health & Wellness</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <label for="file">Image Upload</label>
+                    <input type="file" class="form-control-file" />
+                    <small class="form--text text-muted">Max Size 3mb</small>
+                  </div>
+                  <div class="form-group">
+                    <label for="file">Body</label>
+                    <textarea name="editor1" class="form-control-file">
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Porro earum quasi expedita architecto doloribus 
+                      corporis modi quo unde impedit tempore quisquam iusto, 
+                      est veritatis culpa at ratione, numquam mollitia ex?
+                      </textarea
+                    >
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
         </div>
