--- a/src/settings.html
+++ b/src/settings.html
@@ -30,7 +30,7 @@
               <a href="categories.html" class="nav-link">Categories</a>
             </li>
             <li class="nav-item px-2">
-              <a href="users.html" class="nav-link active">Users</a>
+              <a href="users.html" class="nav-link">Users</a>
             </li>
           </ul>
 
@@ -61,11 +61,11 @@
       </div>
     </nav>
 
-    <header id="main-header" class="py-2 bg-warning text-white">
+    <header id="main-header" class="py-2 bg-primary text-white">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h1><i class="fa fa-users"></i> Users</h1>
+            <h1><i class="fa fa-gear"></i>Settings</h1>
           </div>
         </div>
       </div>
@@ -74,65 +74,80 @@
     <section id="action" class="py-4 mb-4 bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 ml-auto">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="search" />
-              <span class="input-group-btn">
-                <button class="btn btn-warning">Search</button>
-              </span>
-            </div>
+          <div class="col-md-3 mr-auto">
+            <a href="index.html" class="btn btn-light btn-block">
+              <i class="fa fa-arrow-left"></i> Back To Dashboard
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#" class="btn btn-success btn-block">
+              <i class="fa fa-check"></i> Save Changes
+            </a>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="posts">
+    <section id="settings">
       <div class="container">
         <div class="row">
           <div class="col">
             <div class="card">
               <div class="card-header">
-                <h4>Latest Users</h4>
+                <h4>Edit setting</h4>
               </div>
-              <table class="table table-striped">
-                <thead class="thead-dark">
-                  <tr>
-                    <th>#</th>
-                    <th>Name</th>
-                    <th>Email</th>
-                    <th></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td scope="row">1</td>
-                    <td>John Doe</td>
-                    <td>jdoe@gmail.com</td>
-                  </tr>
-                  <tr>
-                    <td scope="row">2</td>
-                    <td>Brad Traversy</td>
-                    <td>bradt@gmail.com</td>
-                  </tr>
-                </tbody>
-              </table>
-              <nav class="ml-4">
-                <ul class="pagination">
-                  <li class="page-item">
-                    <a href="#" class="page-link disabled">Previous</a>
-                  </li>
-                  <li class="page-item active">
-                    <a href="#" class="page-link">1</a>
-                  </li>
-                  <li class="page-item">
-                    <a href="#" class="page-link">2</a>
-                  </li>
-                  <li class="page-item"><a href="#" class="page-link">3</a></li>
-                  <li class="page-item">
-                    <a href="#" class="page-link">Next</a>
-                  </li>
-                </ul>
-              </nav>
+              <div class="card-body">
+                <form>
+                  <fieldset class="form-group">
+                    <legend>Allow User Registration</legend>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input
+                          type="radio"
+                          class="form-check-input"
+                          value="yes"
+                          checked
+                        />
+                        Yes
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input
+                          type="radio"
+                          class="form-check-input"
+                          value="no"
+                        />
+                        No
+                      </label>
+                    </div>
+                  </fieldset>
+                  <fieldset class="form-group">
+                    <legend>Homepage Format</legend>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input
+                          type="radio"
+                          class="form-check-input"
+                          value="posts"
+                          checked
+                        />
+                        Post Index
+                      </label>
+                    </div>
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input
+                          type="radio"
+                          class="form-check-input"
+                          value="page"
+                        />
+                        Single Page
+                      </label>
+                    </div>
+                  </fieldset>
+                </form>
+              </div>
             </div>
           </div>
         </div>
