--- a/src/details.html
+++ b/src/details.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -152,7 +152,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="https://cdn.ckeditor.com/4.14.0/standard/ckeditor.js"></script>
+    <script src="//cdn.ckeditor.com/4.25.1-lts/standard/ckeditor.js"></script>
     <script>
       CKEDITOR.replace("editor1");
     </script>
